2025-03-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-skeleton-process-file): Raise a warning if
	STDERR is not implemented.
	(tramp-handle-shell-command):
	Respect `async-shell-command-display-buffer'.

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file): Handle symlinks.

	* tramp-sshfs.el (tramp-sshfs-handle-process-file): STDERR is not
	implemented.

2025-03-18  Stefan Kangas  <stefankangas@gmail.com>

	* tramp-cmds.el (tramp-rename-files): Prefer 'help-key' when available.

2025-03-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-barf-if-file-missing): Accept also symlinks.
	(tramp-skeleton-file-exists-p): Handle non-existing symlink targets.
	(tramp-skeleton-set-file-modes-times-uid-gid): Fix typo.

	* tramp-gvfs.el (tramp-gvfs-do-copy-or-rename-file): Don't use the
	truename.

	* tramp-sh.el (tramp-do-copy-or-rename-file): Refactor.  Handle
	symlinks.  (Bug#76678)

	* tramp-smb.el (tramp-smb-errors): Add string.
	(tramp-smb-handle-copy-file, tramp-smb-handle-rename-file):
	Refactor.

	* tramp-sudoedit.el (tramp-sudoedit-do-copy-or-rename-file):
	Don't use the truename.  Handle symlinks.

2025-03-15  Sean Whitton  <spwhitton@spwhitton.name>

	* tramp-cmds.el (tramp-revert-buffer-with-sudo)
	(tramp-dired-find-file-with-sudo): Touch up documentation of
	these features.  Add FIXMEs about renaming the two commands.

2025-03-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-dired-buffer-command-completion-p):
	New defun.
	(tramp-dired-find-file-with-sudo): Add property
	`completion-predicate'.

2025-03-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (dired-get-file-for-visit): Declare.
	(with-tramp-file-name-with-method): New macro.
	(tramp-revert-buffer-with-sudo): Autoload.  Preserve position.
	Use `with-tramp-file-name-with-method'.
	(tramp-dired-find-file-with-sudo): New command.

2025-03-12  Michael Albinus  <michael.albinus@gmx.de>
